# clicolcom

./: Makefile  NewIncMaxCLQictai13.c  README.md  all-graphs.sh  build.sh  clq.sh  color.c  ddfw-clique.sh  filter.c  getClique.sh  inner-loop.sh  loop-solve.sh  maxclique.c  new-all-graphs.sh  new-loop.sh  optimize-ord.c  outer-loop.sh  solve.sh  strip.sh  test-clique.sh
BHOSLIB-Max-Clique/: frb30-15-1.clq  frb30-15-2.clq  frb30-15-3.clq  frb30-15-4.clq  frb35-17-1.clq  frb35-17-2.clq  frb35-17-3.clq  frb35-17-4.clq  frb35-17-5.clq  frb40-19-1.clq  frb40-19-2.clq  frb40-19-3.clq  frb40-19-4.clq  frb40-19-5.clq  frb45-21-1.clq  frb45-21-2.clq  frb45-21-3.clq  frb45-21-4.clq  frb45-21-5.clq
DIMACS-Max-Clique/: C125.9.clq  C250.9.clq  C500.9.clq  DSJC1000_5.clq  DSJC500_5.clq  MANN_a27.clq  MANN_a9.clq  brock200_1.clq  brock200_2.clq  brock200_3.clq  brock200_4.clq  brock400_1.clq  brock400_2.clq  brock400_3.clq  brock400_4.clq  brock800_1.clq  brock800_2.clq  brock800_3.clq  brock800_4.clq  c-fat200-1.clq  c-fat200-2.clq  c-fat200-5.clq  c-fat500-1.clq  c-fat500-10.clq  c-fat500-2.clq  c-fat500-5.clq  gen200_p0.9_44.clq  gen200_p0.9_55.clq  gen400_p0.9_55.clq  gen400_p0.9_65.clq  gen400_p0.9_75.clq  hamming6-2.clq  hamming6-4.clq  hamming8-2.clq  hamming8-4.clq  johnson16-2-4.clq  johnson32-2-4.clq  johnson8-2-4.clq  johnson8-4-4.clq  keller4.clq  (+29 more)
DSATUR/: makefile
DSATUR/include/: readfile.h
DSATUR/src/: color.cpp  readfile.cpp
cliquer/: cliquer.c
gc-cdcl/: build.sh
gc-cdcl/ChromSAT/: .clang-format  .gitignore  .gitmodules  Dockerfile  meson.build  meson_options.txt
gc-cdcl/ChromSAT/sota/: cplex.cpp  graph-color.cpp
gc-cdcl/ChromSAT/sota/MiniMerge/: .cproject  .project
gc-cdcl/ChromSAT/sota/MiniMerge/core/: .project  Main.cpp  Makefile  Solver.cpp  Solver.h  SolverTypes.h
gc-cdcl/ChromSAT/sota/MiniMerge/mtl/: Vec.h
gc-cdcl/ChromSAT/sota/MiniMerge/simp/: depend.mk
gc-cdcl/ChromSAT/sota/React-Partialcol/: Graph.C  Graph.h  Makefile  Random.C  Random.h  checkCPUtime.C  checkCPUtime.h  initializeColoring.C  initializeColoring.h  inputGraph.C  inputGraph.h  main.C  manipulateArrays.C  manipulateArrays.h  reactcol.C  reactcol.h  tabu.C  tabu.h  termcolors.h  verifyColoring.C  verifyColoring.h
gc-cdcl/ChromSAT/sota/Segundo/DSATUR/: Makefile  bornes.cpp  bornes.h  dsatur_algo.cpp  dsatur_algo.h  graphe.cpp  graphe.h  main.cpp
gc-cdcl/ChromSAT/sota/Segundo/DSATUR/cliquer/: cliquer.cpp  reorder.cpp  set.h
gc-cdcl/ChromSAT/sota/color6/: Makefile  color6.c
gc-cdcl/ChromSAT/sota/converter/: .cproject  converter.c  converter.h  main.c
gc-cdcl/ChromSAT/sota/converter/.svn/: all-wcprops  entries
gc-cdcl/ChromSAT/sota/converter/.svn/text-base/: .cproject.svn-base  .project.svn-base  Makefile.svn-base  converter.c.svn-base  converter.h.svn-base  converter.svn-base  main.c.svn-base  test.cnf.svn-base
gc-cdcl/ChromSAT/sota/dOmega/LS/src/: Buss.cpp  Buss.h  Clique.cpp  Clique.h  Graph.cpp  Graph.h  NemhauserTrotter.cpp  NemhauserTrotter.h  VertexCover.cpp  VertexCover.h  main.cpp
gc-cdcl/ChromSAT/sota/trick/: Makefile  dsatur.c
gc-cdcl/ChromSAT/src/: bitset.hpp  brancher.hpp  cliquesampler.hpp  constants.hpp  csv.hpp  dimacs.hpp  dsatur.hpp  edgeformat.hpp  fillin.hpp  gc.cpp  graph.hpp  interval_list.cpp  interval_list.hpp  intstack.cpp  intstack.hpp  local_tests.cpp  mcs.hpp  mycielski.cpp  mycielski.hpp  options.cpp  options.hpp  partition.cpp  partition.hpp  preprocessing.cpp  prop.cpp  prop.hpp  reduction.hpp  rewriter.cpp  rewriter.hpp  snap.hpp  sparse_dynamic_graph.cpp  sparse_dynamic_graph.hpp  sparse_graph.cpp  sparse_graph.hpp  statistics.cpp  statistics.hpp  utils.hpp  varmap.hpp  vcsolver.hpp  vertices_vec.cpp  (+1 more)
gc-cdcl/minicsp/: .hgignore  CMakeLists.txt  README  minicsp-1.0.sln  minicsp-1.0.vcxproj  minicsp-1.0.vcxproj.filters
gc-cdcl/minicsp/examples/: Makefile  golomb.cpp  graceful_graph.cpp  money.cpp
gc-cdcl/minicsp/minicsp/core/: Makefile  cmdline.cpp  cmdline.hpp  cons.cpp  cons.hpp  main.cpp  nvalue.cpp  setcons.cpp  setcons.hpp  solver.cpp  solver.hpp  solvertypes.hpp  utils.cpp  utils.hpp
gc-cdcl/minicsp/minicsp/fz/: Makefile  ast.hpp  conexpr.hpp  flatzinc.cpp  flatzinc.hpp  lexer.lxx  main-fz.cpp  minicsp-mzn  option.hpp  parser.hpp  parser.yxx  registry.cpp  registry.hpp  symboltable.hpp  test_fcts.sh  varspec.hpp
gc-cdcl/minicsp/minicsp/mtl/: Alg.h  Vec.h  template.mk
gc-cdcl/minicsp/minicsp/test/: Makefile  alldiff.cpp  arith.cpp  bt.cpp  dom.cpp  element.cpp  lex.cpp  lin.cpp  main.cpp  nvalue.cpp  pb.cpp  regular.cpp  schedule.cpp  set.cpp  test.cpp  test.hpp
gc-cdcl/minicsp/minicsp/xcsp/: AST.hh  CSPParserCallback.hh  Makefile  XMLParser.hh  XMLParser_libxml2.hh  main-xcsp.cpp  minicsp_callback.hpp
gc-cdcl/minicsp/minicsp/xcsp3/: Makefile  Tree.hpp  XCSP3MiniCSPCallbacks.hpp  main-xcsp3.cpp
graphs/: 1-FullIns_3.col  1-FullIns_4.col  1-FullIns_5.col  1-Insertions_4.col  1-Insertions_5.col  1-Insertions_6.col  2-FullIns_3.col  2-FullIns_4.col  2-FullIns_5.col  2-Insertions_3.col  2-Insertions_4.col  2-Insertions_5.col  3-FullIns_3.col  3-FullIns_4.col  3-FullIns_5.col  3-Insertions_3.col  3-Insertions_4.col  3-Insertions_5.col  4-FullIns_3.col  4-FullIns_4.col  4-FullIns_5.col  4-Insertions_3.col  4-Insertions_4.col  5-FullIns_3.col  5-FullIns_4.col  DSJC1000.1.col  DSJC1000.5.col  DSJC125.1.col  DSJC125.5.col  DSJC125.9.col  DSJC250.1.col  DSJC250.5.col  DSJC250.9.col  DSJC500.1.col  DSJC500.5.col  DSJC500.9.col  DSJR500.1.col  DSJR500.1c.col  DSJR500.5.col  abb313GPIA.col  (+91 more)
results/10m_cadical_results/: DSJR500.5.col_cadical_152075736.out  DSJR500.5.col_cadical_191021132.out  DSJR500.5.col_cadical_21791284.out  DSJR500.5.col_cadical_243291156.out  DSJR500.5.col_cadical_243601208.out  DSJR500.5.col_cadical_268726504.out  DSJR500.5.col_cadical_2921823816.out  DSJR500.5.col_cadical_3026723311.out  DSJR500.5.col_cadical_813415561.out  DSJR500.5.col_cadical_840030546.out  anna.col_cadical_152075736.out  anna.col_cadical_191021132.out  anna.col_cadical_21791284.out  anna.col_cadical_243291156.out  (+676 more)
(+1087 files in other folders)
